# sonolus-level-converters

./: .gitignore  LevelData  LevelData_Official_Extracted  README.md  chcy  main.py  marbleblue.sus  output.pjsk  pyproject.toml  raw_skills.usc  requirements.txt  roundtrip_output.pjsk  skills.sus  skills.usc  sus.sus  test.ld  test.leveldata  test.py  test.sus  test.usc  test_out.sus  test_out.usc  test_pjsk.ld  test_roundtrip.py
custom_sus_io/: __init__.py  dumper.py  loader.py  schemas.py
level/sonolus/: info
level/sonolus/backgrounds/: black  darkblue  list  vanilla
level/sonolus/effects/: 8bit  list  none
level/sonolus/engines/: list  pjsekai
level/sonolus/levels/: list  local-9c49dc09-4c53-4bcf-9c17-8352c6aabad8
sonolus_converters/: __init__.py  archetypes.py  cli.py  detector.py  level.py  scp.py  utils.py
sonolus_converters/LevelData/: __init__.py  detector.py  loader.py
sonolus_converters/bandori_sus/: __init__.py  loader.py
sonolus_converters/mmw/: exporter.py  loader.py
sonolus_converters/mmws/: __init__.py  detector.py  exporter.py  loader.py  mmw_io.py
sonolus_converters/notes/: __init__.py  bpm.py  guide.py  metadata.py  score.py  single.py  slide.py  timescale.py  volume.py
sonolus_converters/pjsk/: __init__.py  detector.py  exporter.py  loader.py
sonolus_converters/sus/: __init__.py  detector.py  exporter.py  loader.py  notetype.py
sonolus_converters/usc/: __init__.py  detector.py  exporter.py  loader.py
test_files/: 88s_append.pjsk.json  asyoulikeit_append.sus  empurple_append.pjsk.json  intense_voice_full_append.pjsk.json
(+16 files in other folders)
