[project]
name = "sonolus_converters"
version = "1.0.3"
description = "Convert between PJSK and Sonolus charting files!"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPLv3"}
authors = [{ name = "YumYummity", email = "yumyummity@gmail.com" }]

dependencies = [
    "base36>=0.1.1,<0.2.0",
    "numpy"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true